# xsdc

./: .gitignore  README.md  pyproject.toml
xsdc/: __init__.py  __main__.py  settings.py  strip_comments.py  xsdtojson.py
xsdc/utils/: logger.py
